--- a/cenovnik.html
+++ b/cenovnik.html
@@ -1,91 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cenovnik</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
     <nav class="navbar">
-        <div class="navbar_container">
-                <a href="index.html" ><img src="img/logob.png" alt="logo"> </a>
+      <div class="navbar_container">
+        <a href="index.html"><img src="img/logob.png" alt="logo" /> </a>
 
-                <div>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </div>
-
-                <div class="navbar_menu"> 
-                    <a href="index.html" class="navbar_link">Početna</a>
-                    <a href="o_nama.html" class="navbar_link">O nama</a>
-                    <a href="cenovnik.html" class="navbar_link">Cenovnik</a>
-                    <a href="kontakt.html" class="navbar_link">Kontakt</a>
-                </div>
+        <div>
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
         </div>
+
+        <div class="navbar_menu">
+          <a href="index.html" class="navbar_link">Početna</a>
+          <a href="o_nama.html" class="navbar_link">O nama</a>
+          <a href="cenovnik.html" class="navbar_link">Cenovnik</a>
+          <a href="kontakt.html" class="navbar_link">Kontakt</a>
+        </div>
+      </div>
     </nav>
-    <div class="tata" style="background-image: url('img/slika_3.jpg'); background-size: 100%; background-repeat: no-repeat;">
-        <div class="open_content">
-            
-            <h1 class="title">Cenovnik</h1>
-        </div>
+    <div
+      class="tata"
+      style="
+        background-image: url('img/slika_3.jpg');
+        background-size: 100%;
+        background-repeat: no-repeat;
+      "
+    >
+      <div class="open_content">
+        <h1 class="title">Cenovnik</h1>
+      </div>
     </div>
     <div class="cenovnik">
-        <table >
-            <tr> <th>Usluga</th> <th >Cena</th>
-            </tr> 
-            <tr> <td>Grants</td> <td>11,980</td> 
-            </tr> 
-            <tr> <td>Grants</td> <td>4,780</td> 
-            </tr> 
-            <tr> <td>Grants</td> <td>8,000</td> 
-            </tr> 
-            <tr> <td>Grants</td> <td>3,200</td> 
-            </tr> 
-            <tr> <td>Grants</td> <td>28,400</td> 
-            </tr> 
-            <tr>
-                <td>Grants</td> <td>2,100</td>
-            </tr> 
-            <tr> <td>Grants</td> <td>58,460</td> 
-            </tr>
-            <tr> <td>Grants</td> <td>11,980</td> 
-            </tr> 
-            <tr> <td>Grants</td> <td>4,780</td> 
-            </tr> 
-            <tr> <td>Grants</td> <td>8,000</td> 
-            </tr> 
-            <tr> <td>Grants</td> <td>3,200</td> 
-            </tr> 
-            <tr> <td>Grants</td> <td>28,400</td> 
-            </tr> <tr>
-                <td>Grants</td> <td>2,100</td>
-            </tr> 
-            <tr><td>Grants</td> <td>58,460</td> 
-            </tr></table>
+      <table>
+        <tr>
+          <th>Usluga</th>
+          <th>Cena</th>
+        </tr>
+        <tr>
+          <td>Grants</td>
+          <td>11,980</td>
+        </tr>
+        <tr>
+          <td>Grants</td>
+          <td>4,780</td>
+        </tr>
+        <tr>
+          <td>Grants</td>
+          <td>8,000</td>
+        </tr>
+        <tr>
+          <td>Grants</td>
+          <td>3,200</td>
+        </tr>
+        <tr>
+          <td>Grants</td>
+          <td>28,400</td>
+        </tr>
+        <tr>
+          <td>Grants</td>
+          <td>2,100</td>
+        </tr>
+        <tr>
+          <td>Grants</td>
+          <td>58,460</td>
+        </tr>
+        <tr>
+          <td>Grants</td>
+          <td>11,980</td>
+        </tr>
+        <tr>
+          <td>Grants</td>
+          <td>4,780</td>
+        </tr>
+        <tr>
+          <td>Grants</td>
+          <td>8,000</td>
+        </tr>
+        <tr>
+          <td>Grants</td>
+          <td>3,200</td>
+        </tr>
+        <tr>
+          <td>Grants</td>
+          <td>28,400</td>
+        </tr>
+        <tr>
+          <td>Grants</td>
+          <td>2,100</td>
+        </tr>
+        <tr>
+          <td>Grants</td>
+          <td>58,460</td>
+        </tr>
+      </table>
     </div>
-    <p class="call">Pozovite nas na 061/111-11-11 ili nam pišite putem mejla damservice@gmail.com</p>
+    <p class="call">
+      Pozovite nas na 061/111-11-11 ili nam pišite putem mejla
+      damservice@gmail.com
+    </p>
+    <a class="pdf" href="./Kombinatorika 02.pdf" target="_blank"
+      >Preuzmite cenovnik u PDF-u</a
+    >
+    <div class="kontaktTata">
+      <p class="kontaktTxt">Ukoliko nema cene vaše usluge</p>
+      <a href="kontakt.html"
+        ><button class="button">Kontaktirajte nas!</button></a
+      >
+    </div>
     <div class="footer">
-        <div class="about">
-                <a href="index.html" ><img id="footerlogo" src="img/logoc.png" alt="logo"> </a>
-            <div id="address">
-                <p>Fakultet organizacionih nauka<br>Jove Ilića 154<br>11000,Beograd</p>
-            </div>
+      <div class="about">
+        <a href="index.html"
+          ><img id="footerlogo" src="img/logoc.png" alt="logo" />
+        </a>
+        <div id="address">
+          <p>
+            Fakultet organizacionih nauka<br />Jove Ilića 154<br />11000,Beograd
+          </p>
         </div>
-        <div class="menu">
-            <ul>
-            <li><a href="index.html" class="navbar_link">Početna</a></li>
-            <li><a href="o_nama.html" class="navbar_link">O nama</a></li>
-            <li><a href="cenovnik.html" class="navbar_link">Cenovnik</a></li>
-            <li><a href="kontakt.html" class="navbar_link">Kontakt</a></li>
+      </div>
+      <div class="menu">
+        <ul>
+          <li><a href="index.html" class="navbar_link">Početna</a></li>
+          <li><a href="o_nama.html" class="navbar_link">O nama</a></li>
+          <li><a href="cenovnik.html" class="navbar_link">Cenovnik</a></li>
+          <li><a href="kontakt.html" class="navbar_link">Kontakt</a></li>
         </ul>
-        </div>
-        <div class="contact">
-            <p id="mobile">Kontakt telefon:<br>061/111-11-11<br>Kontakt mejl:<br>damservice@gmail.com</p>
-            
-        </div>
-        </div>
-</body>
+      </div>
+      <div class="contact">
+        <p id="mobile">
+          Kontakt telefon:<br />061/111-11-11<br />Kontakt mejl:<br />damservice@gmail.com
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
