--- a/kontakt.html
+++ b/kontakt.html
@@ -26,7 +26,7 @@
                 </div>
         </div>
     </nav>
-    <div class="tata" style="background-image: url('img/slika_2.jpg'); background-size: 100%; background-repeat: no-repeat;">
+    <div class="tata" style="background-image: url('img/slika2.jpg'); background-size: 100%; background-repeat: no-repeat;">
         <div class="open_content">
             
         <h1 class="title">Kontakt</h1>
@@ -66,6 +66,7 @@
     </div>
     <div id="contact">
         <img id="contactpic" src="img/telefon.png" alt="picture">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ullam architecto deserunt, libero amet fugit dolorem ex distinctio. Perferendis aspernatur dolorum deserunt rerum? A ipsum sequi eligendi quidem! Laborum, Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit earum, praesentium dolorum distinctio voluptatum nihil. Odit fuga autem nihil neque vero officia impedit reprehenderit! Architecto numquam hic voluptatem quos non.</p>
     </div>
 </div>
     <div class="footer">
