--- a/o_nama.html
+++ b/o_nama.html
@@ -29,7 +29,7 @@
     <div
       class="tata"
       style="
-        background-image: url('img/slika_4.jpg');
+        background-image: url('img/slika4.jpg');
         background-size: 100%;
         background-repeat: no-repeat;
       "
