--- a/cenovnik.html
+++ b/cenovnik.html
@@ -29,7 +29,7 @@
     <div
       class="tata"
       style="
-        background-image: url('img/slika_3.jpg');
+        background-image: url('img/slika3.jpg');
         background-size: 100%;
         background-repeat: no-repeat;
       "
