--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
             <p class="uslugeTxt hidden">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi dolore, architecto reiciendis facere illo assumenda ipsum, est, ratione eos commodi deserunt? Nobis accusamus molestias quae rerum illum amet? Harum, numquam.
             Voluptas aut et, deserunt, velit dignissimos repellendus libero labore magnam nostrum inventore obcaecati exercitationem hic corrupti molestias dolore unde modi distinctio. Nam porro maiores saepe facere impedit modi quod delectus.</p>
         </div>
+        <div class="kratko_o_nama">
+            <div id="text">
+            <h2><b><i>Kratko o nama</i></b></h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat delectus, voluptatem dolorum non molestiae architecto excepturi. Excepturi nobis placeat sapiente voluptates fugiat. Id optio magni et sunt voluptatem ipsum at. Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores harum animi accusantium alias dolores quibusdam id assumenda mollitia sit libero voluptate, quam sunt minima. Est commodi ad cumque quas labore! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum perspiciatis quae sit repudiandae ex non nesciunt vero neque voluptatem ullam, a enim commodi magni ratione dolorum fuga nam iste molestiae.</p>
+        </div>
+        <div id="dugme">
+        <a href="kontakt.html"><button class="button">Kontaktirajte nas!</button></a>
+    </div>
+    </div>
+
     </div>
     
 
