--- a/cenovnik.html
+++ b/cenovnik.html
@@ -45,68 +45,61 @@
           <th>Cena</th>
         </tr>
         <tr>
-          <td>Grants</td>
-          <td>11,980</td>
+          <td><i>Antistatičko čišćenje i zamena termalne paste za laptop računare</i></td>
+          <td>3000 RSD</td>
         </tr>
         <tr>
-          <td>Grants</td>
-          <td>4,780</td>
+          <td><i>Antistatičko čišćenje i zamena termalne paste za desktop računare</i></td>
+          <td>2500 RSD</td>
         </tr>
         <tr>
-          <td>Grants</td>
-          <td>8,000</td>
+          <td><i>Čišćenje virusa i antivirus zaštita</i></td>
+          <td>3000 RSD</td>
         </tr>
         <tr>
-          <td>Grants</td>
-          <td>3,200</td>
+          <td><i>Umrežavanje računara</i></td>
+          <td>3000 RSD</td>
         </tr>
         <tr>
-          <td>Grants</td>
-          <td>28,400</td>
+          <td><i>Instalacija operativnog sistema sa driverima i svim osnovnim programima za rad na SSD (bez backupa)</i></td>
+          <td>3000 RSD</td>
         </tr>
         <tr>
-          <td>Grants</td>
-          <td>2,100</td>
+          <td><i>Instalacija operativnog sistema sa driverima i svim osnovnim programima za rad na HDD (bez backupa)</i></td>
+          <td>4000 RSD</td>
         </tr>
         <tr>
-          <td>Grants</td>
-          <td>58,460</td>
+          <td><i>Backup podataka od 0 do 20GB</i></td>
+          <td>2000 RSD</td>
         </tr>
         <tr>
-          <td>Grants</td>
-          <td>11,980</td>
+          <td><i>Backup podataka od 20 do 100GB</i></td>
+          <td>4000 RSD</td>
         </tr>
         <tr>
-          <td>Grants</td>
-          <td>4,780</td>
+          <td><i>Backup podataka preko 100GB</i></td>
+          <td>6000 RSD</td>
         </tr>
         <tr>
-          <td>Grants</td>
-          <td>8,000</td>
+          <td><i>Nadogradnja računara</i></td>
+          <td>2500 RSD</td>
         </tr>
         <tr>
-          <td>Grants</td>
-          <td>3,200</td>
+          <td><i>Sklapanje konfiguracije (U cenu uračunata i instalacija sistema)</i></td>
+          <td>6000 RSD</td>
         </tr>
         <tr>
-          <td>Grants</td>
-          <td>28,400</td>
+          <td><i>Dijagnostika kvara na desktop računaru</i></td>
+          <td>2000 RSD</td>
         </tr>
         <tr>
-          <td>Grants</td>
-          <td>2,100</td>
-        </tr>
-        <tr>
-          <td>Grants</td>
-          <td>58,460</td>
+          <td><i>Dijagnostika kvara na laptopu</i></td>
+          <td>2000 RSD</td>
         </tr>
       </table>
     </div>
-    <p class="call">
-      Pozovite nas na 061/111-11-11 ili nam pišite putem mejla
-      damservice@gmail.com
-    </p>
-    <a class="pdf" href="./Kombinatorika 02.pdf" target="_blank"
+    
+    <a class="pdf" href="https://drive.google.com/file/d/1F97HB1OvbCUWGQwoF9_pJPDH_0L1cgK7/view?usp=sharing" target="_blank"
       >Preuzmite cenovnik u PDF-u</a
     >
     <div class="kontaktTata">
