--- a/index.html
+++ b/index.html
@@ -36,33 +36,35 @@
     <h2 class="naslovUsluge">Naše usluge</h2>
     <div class="usluge">
         <div class="usluga">
-            <h4>Ciscenje</h4>
-            <img src="./img/slikaDrzac.png" alt="" srcset="">
-            <p class="uslugeTxt hidden">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit ipsam, in eveniet alias, pariatur minima dolores hic sint nemo enim dolorum repudiandae esse consequatur! Non quia eum quo voluptatibus in.
-            Iste in pariatur quaerat harum? Aliquam laudantium nulla ut vitae saepe aliquid quis reprehenderit, provident quasi officia consequuntur inventore tempore doloribus enim. Ducimus nam iure, totam quae officiis ratione deserunt.</p>
+            <h4>Čiščenje računara</h4>
+            <img src="./img/ciscenje.png" alt="" srcset="">
+            <p class="uslugeTxt hidden">Čišćenje laptopa se obavlja kada laptop pregreva, radi sporo zbog virusa, sistem podiže dugo, ventilator ne radi, izlazi plavi ekran. Problem začepljenja rashladnog sistema na laptopu izaziva nečistoća koji se nakuplja u unutar kućišta. Godišnje je potrebno jednom kompletno očistiti laptop.
+                Bez brige, mi čišćenje laptopa radimo brzo i efikasno sa garancijom na rad.
+                </p>
         </div>
         <div class="usluga">
             <h4>Instalacija OS</h4>
-            <img src="./img/slikaDrzac.png" alt="" srcset="">
-            <p class="uslugeTxt hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, odit dolores magnam iure officiis voluptas explicabo, itaque veniam rerum perferendis provident eveniet. Soluta vero nisi vitae! Incidunt molestiae quidem exercitationem!
-            Officiis omnis rerum quisquam maiores vitae non, adipisci ut tenetur soluta architecto velit ipsa nihil perferendis illum mollitia, pariatur consequatur delectus ducimus cum. Voluptate asperiores amet, minus magnam sint praesentium!</p>
+            <img src="./img/instalOS.png" alt="" srcset="">
+            <p class="uslugeTxt hidden">Instalacija sistema Windows 11 (provera hardvera obavezna ), 10, 8, Win 7, XP, Linux i MAC OS se obavlja na novi laptop ili desktop računar bez operativnog sistema. Takođe, podizanje/obaranje sistema se obavlja i zbog oštećenja operativnog sistema od strane virusa ili slučajnim brisanjem važnih datoteka. Naš servis racunara vrši instaliranje sistema po želji i prema zahtevima vašeg računara. Uz sistem se vrši instalacija drajvera i potrebnih programa.</p>
         </div>
         <div class="usluga">
-            <h4>Popravka</h4>
-            <img src="./img/slikaDrzac.png" alt="" srcset="">
-            <p class="uslugeTxt hidden">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor nemo voluptas minima sint, placeat magni omnis sapiente facere, assumenda inventore veniam beatae amet dicta commodi exercitationem numquam, autem quam excepturi.
-            Facere porro expedita itaque consectetur at ea minima iure repudiandae tenetur deleniti officiis qui, nulla numquam exercitationem quas dolorem eius rerum dolor fugiat! Unde consequuntur molestias, et eius commodi velit!</p>
+            <h4>Laptop servis</h4>
+            <img src="./img/poravka.png" alt="" srcset="">
+            <p class="uslugeTxt hidden">DAM servis laptopova u Beogradu obavlja popravku laptopova: Apple (MAC, iMAC), Asus, Acer, Emachines, Fujitsu Siemens, HP, Dell, LG, IBM, Lenovo, Toshiba, Samsung, Sony. Najčešći problem na laptopu je hardverski i nastaje nepažnjom korisnika (prosuta tečnost po tastaturi), ali i usled oštećenja hardvera (polomljen ekran, flet kabl, baterija, ventilator, polomljen ulaz za punjač-DC konektor, pokvaren punjač, polomljene šarke, plastika, laptop se gasi-restartuje, koči pri radu ... itd).</p>
         </div>
         <div class="usluga">
-            <h4>Zamena baterije</h4>
-            <img src="./img/slikaDrzac.png" alt="" srcset="">
-            <p class="uslugeTxt hidden">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi dolore, architecto reiciendis facere illo assumenda ipsum, est, ratione eos commodi deserunt? Nobis accusamus molestias quae rerum illum amet? Harum, numquam.
-            Voluptas aut et, deserunt, velit dignissimos repellendus libero labore magnam nostrum inventore obcaecati exercitationem hic corrupti molestias dolore unde modi distinctio. Nam porro maiores saepe facere impedit modi quod delectus.</p>
+            <h4>Servis računara</h4>
+            <img src="./img/servisrac1.png" alt="" srcset="">
+            <p class="uslugeTxt hidden"> DAM servis računara u Beogradu vrši popravke svih vrsta računara. Popravka obuhvata softverske i hardverske probleme: instalacija sistema, brisanje virusa, popravka hardvera i softvera, održavanje sistema.
+                Svaki problem na računaru otklanjamo 100% uspešno. Besplatna dijagnostika obuhvata brzu proveru hardvera i softvera. Nakon kompletne popravke vaš kompjuter mora raditi kao nov !
+                </p>
         </div>
         <div class="kratko_o_nama">
             <div id="text">
-            <h2><b><i>Kratko o nama</i></b></h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat delectus, voluptatem dolorum non molestiae architecto excepturi. Excepturi nobis placeat sapiente voluptates fugiat. Id optio magni et sunt voluptatem ipsum at. Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores harum animi accusantium alias dolores quibusdam id assumenda mollitia sit libero voluptate, quam sunt minima. Est commodi ad cumque quas labore! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum perspiciatis quae sit repudiandae ex non nesciunt vero neque voluptatem ullam, a enim commodi magni ratione dolorum fuga nam iste molestiae.</p>
+            <h2 style="font-size: 2.5rem;"><b>Kratko o nama</b></h2>
+            <p>DAM servis se izdvaja od konkurencije po dugogodišnjem iskustvu u servisiranju i održavanju računara, jer našim klijentima pružamo brzu i kvalitetnu uslugu. Naš servis računara pruža vam potpunu podršku u informacionom radu. Ukoliko imate bilo kakave probleme u radu računara I laptopa, želite da nadogradite ili poboljšate računar, ako imate problem sa LAN mrežom, WIFI ili na internetu, mučite muku sa virusima, potrebna vam je tehnička podrška - mi smo tu za vas! 
+                Pronaći ćemo optimalno rešenje za besprekoran rad vašeg računara. 
+                </p>
         </div>
         <div id="dugme">
         <a href="kontakt.html"><button class="button">Kontaktirajte nas!</button></a>
