--- a/kontakt.html
+++ b/kontakt.html
@@ -66,7 +66,12 @@
     </div>
     <div id="contact">
         <img id="contactpic" src="img/telefon.png" alt="picture">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum ullam architecto deserunt, libero amet fugit dolorem ex distinctio. Perferendis aspernatur dolorum deserunt rerum? A ipsum sequi eligendi quidem! Laborum, Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit earum, praesentium dolorum distinctio voluptatum nihil. Odit fuga autem nihil neque vero officia impedit reprehenderit! Architecto numquam hic voluptatem quos non.</p>
+    <p>Budući da su računari I laptopovi deo svakodnevnice jednog čoveka, zakazujemo popravku u roku od 1 do 2 dana, a uslugu vršimo istog tog dana kada nam donesete računar ili laptop I u zavisnosti od kvara I težine usluge Vam u najkraćem mogućem roku popravljamo uredjaje.</br></br>Nasa servis podrška je tu u svakom trenutku za vas. Tu smo da odgovorimo na sva Vaša pitanja u vezi popravke računara, nedoumica u vezi sa korišćenjem I damo savete za adekvatno korišćenje opreme. Budite slobodni da nas kontaktirate u svakom trenutku I zakažetepopravku Vašeg računara.
+    </br>
+    </br> mail: damservice@gmail.com
+  </br>Adresa: Jove Ilića 154, Beograd
+  </br>Kontakt telefon: 061/111-11-11
+  </br>Servis podrška: 061/111-11-23</p>
     </div>
 </div>
     <div class="footer">
