--- a/o_nama.html
+++ b/o_nama.html
@@ -29,14 +29,11 @@
     <div
       class="tata"
       style="
-        background-image: url('img/slika4.jpg');
+        background-image: url('img/about1.jpg');
         background-size: 100%;
         background-repeat: no-repeat;
       "
     >
-      <div class="open_content">
-        <h1 class="title">O nama</h1>
-      </div>
     </div>
     <div class="team">
       <p class="subtitle">Naš tim čine</p>
@@ -46,7 +43,7 @@
           <p>Aleksa Krstić<br />Osnivač i direktor firme</p>
         </div>
         <div class="slika">
-          <img src="img/mina1.png" alt="Mina Kovačina" />
+          <img src="img/mina1.jpeg" alt="Mina Kovačina" />
           <p>Mina Kovačina<br />Direktorka marketinga i prodaje</p>
         </div>
         <div class="slika">
@@ -57,28 +54,24 @@
     </div>
     <div class="oncont" id="leva">
       <div class="pic">
-        <img src="img/slika4.jpg" alt="slika" />
+        <img src="img/poc11.png" alt="slika" />
       </div>
       <div class="txt">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-          deserunt ea, veniam ex id eos omnis similique assumenda provident
-          magnam temporibus accusantium dolorem iusto fuga tempora numquam minus
-          ipsam exercitationem.
+          Naš tim čine mladi, vredni i komunikativni ljudi koji imaju žellju da za Vas poprave I unaprede računare I laptopove koji će odgovarati svim vašim potrebama i željama. Svakodnevno se trudimo da budemo što bolji i unapredimo svoje znanje kako bismo mogli odgovoriti i na najzahtevnije izazove koje pred nas svakodnevno stavljaju naši korisnici. Zahvaljujući timskom radu i dobroj organizovanosti, možemo se pohvaliti velikim brojem zadovoljnih korisnika. 
         </p>
       </div>
     </div>
     <div class="oncont" id="desna">
       <div class="txt">
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Enim nulla
-          laborum recusandae provident vitae molestiae molestias! Facere, nam
-          officia, voluptatibus impedit blanditiis laboriosam veniam assumenda
-          totam expedita sapiente voluptatum porro.
+          <b>DAM SERVIS RAČUNARA I LAPTOPOVA </b></br>
+          DAM servis desktop i laptop računara iza sebe ima 3 godina uspešnog rada. Na hiljade zadovoljnih mušterija, hiljade popravljenih računara i laptopova. Mi možemo sve. Potrebno je samo da nam verujete.
+          
         </p>
       </div>
       <div class="pic">
-        <img src="img/slika4.jpg" alt="slika" />
+        <img src="img/poc2.png" alt="slika" />
       </div>
     </div>
     <div class="footer">
