--- a/cenovnik.html
+++ b/cenovnik.html
@@ -6,16 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cenovnik</title>
     <link rel="stylesheet" href="css/style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
   </head>
   <body>
     <nav class="navbar">
       <div class="navbar_container">
         <a href="index.html"><img src="img/logob.png" alt="logo" /> </a>
 
-        <div>
+        <div class="burger">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
+        </div>
+        <div class="sidebar">
+          <ul>
+          <li><a  href="index.html">Početna</a></li>
+          <li><a  href="o_nama.html">O nama</a></li>
+          <li><a  href="cenovnik.html">Cenovnik</a></li>
+          <li><a  href="kontakt.html">Kontakt</a></li>
+        </ul>
         </div>
 
         <div class="navbar_menu">
@@ -108,6 +117,9 @@
         ><button class="button">Kontaktirajte nas!</button></a
       >
     </div>
+    <div class="mapa">
+      <img src="img/mapa1.png" alt="mapa">
+  </div>
     <div class="footer">
       <div class="about">
         <a href="index.html"
@@ -129,9 +141,10 @@
       </div>
       <div class="contact">
         <p id="mobile">
-          Kontakt telefon:<br />061/111-11-11<br />Kontakt mejl:<br />damservice@gmail.com
+          Kontakt telefon:<br />061/111-11-11<br />Kontakt imejl:<br />damservice@gmail.com
         </p>
       </div>
     </div>
+    <script type="text/javascript" src="js/script.js"></script>
   </body>
 </html>
