--- a/kontakt.html
+++ b/kontakt.html
@@ -59,7 +59,7 @@
             <input type="text" name="name" id="model" class="txt" /> </div>
             <div >
             <label for="name">Objasnite nam vaš problem:</label><br> 
-            <textarea id="napomena" name="text" rows="10" cols="70" style="font-size: 1.8vw;"></textarea> </div> 
+            <textarea id="napomena" name="text" rows="10" cols="70"></textarea> </div> 
             <div>
                 <label>Da li ste bili naš korisnik?<br></label>
                 <label for="customer">Da</label>
