--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
         <div class="usluga">
             <h4>Čiščenje računara</h4>
             <img src="./img/ciscenje.png" alt="" srcset="">
-            <p class="uslugeTxt hidden">Čišćenje laptopa se obavlja kada laptop pregreva, radi sporo zbog virusa, sistem podiže dugo, ventilator ne radi, izlazi plavi ekran. Problem začepljenja rashladnog sistema na laptopu izaziva nečistoća koji se nakuplja u unutar kućišta. Godišnje je potrebno jednom kompletno očistiti laptop.
+            <p class="uslugeTxt hidden">Čišćenje laptopa se obavlja kada laptop pregreva, radi sporo zbog virusa, sistem podiže dugo, ventilator ne radi, pojavljuje se plavi ekran. Problem začepljenja rashladnog sistema na laptopu izaziva nečistoća koji se nakuplja u unutar kućišta. Godišnje je potrebno jednom kompletno očistiti laptop.
                 Bez brige, mi čišćenje laptopa radimo brzo i efikasno sa garancijom na rad.
                 </p>
         </div>
         <div class="usluga">
             <h4>Instalacija OS</h4>
             <img src="./img/instalOS.png" alt="" srcset="">
-            <p class="uslugeTxt hidden">Instalacija sistema Windows 11 (provera hardvera obavezna ), 10, 8, Win 7, XP, Linux i MAC OS se obavlja na novi laptop ili desktop računar bez operativnog sistema. Takođe, podizanje/obaranje sistema se obavlja i zbog oštećenja operativnog sistema od strane virusa ili slučajnim brisanjem važnih datoteka. Naš servis racunara vrši instaliranje sistema po želji i prema zahtevima vašeg računara. Uz sistem se vrši instalacija drajvera i potrebnih programa.</p>
+            <p class="uslugeTxt hidden">Instalacija operativnog sistema Windows 11 (provera hardvera obavezna), 10, 8, Win 7, XP, Linux i MAC OS se obavlja na novi laptop ili desktop računar bez operativnog sistema. Takođe, podizanje/obaranje sistema se obavlja i zbog oštećenja operativnog sistema od strane virusa ili slučajnim brisanjem važnih datoteka. Naš servis racunara vrši instaliranje sistema po želji i prema zahtevima vašeg računara. Uz sistem se vrši instalacija drajvera i potrebnih programa.</p>
         </div>
         <div class="usluga">
             <h4>Laptop servis</h4>
             <img src="./img/poravka.png" alt="" srcset="">
-            <p class="uslugeTxt hidden">DAM servis laptopova u Beogradu obavlja popravku laptopova: Apple (MAC, iMAC), Asus, Acer, Emachines, Fujitsu Siemens, HP, Dell, LG, IBM, Lenovo, Toshiba, Samsung, Sony. Najčešći problem na laptopu je hardverski i nastaje nepažnjom korisnika (prosuta tečnost po tastaturi), ali i usled oštećenja hardvera (polomljen ekran, flet kabl, baterija, ventilator, polomljen ulaz za punjač-DC konektor, pokvaren punjač, polomljene šarke, plastika, laptop se gasi-restartuje, koči pri radu ... itd).</p>
+            <p class="uslugeTxt hidden">DAM servis laptopova u Beogradu obavlja popravku laptopova: Apple (MAC, iMAC), Asus, Acer, Emachines, Fujitsu Siemens, HP, Dell, LG, IBM, Lenovo, Toshiba, Samsung, Sony. Najčešći problem na laptopu je hardverski i nastaje nepažnjom korisnika (prosuta tečnost po tastaturi), ali i usled oštećenja hardvera (polomljen ekran, flet kabl, baterija, ventilator, polomljen ulaz za punjač-DC konektor, pokvaren punjač, polomljene šarke, plastika, laptop se gasi-restartuje, koči pri radu, itd... ).</p>
         </div>
         <div class="usluga">
             <h4>Servis računara</h4>
