--- a/kontakt.html
+++ b/kontakt.html
@@ -46,19 +46,19 @@
         <form id="forma"> 
             
             <div > 
-            <label for="name">Ime i prezime</label><br> 
+            <label for="name">Ime i prezime:</label><br> 
             <input type="text" name="name" id="imeprez" class="txt" /> </div> 
             <div >
-            <label for="name">Mejl adresa</label><br> 
+            <label for="name">Imejl adresa:</label><br> 
             <input type="text" name="name" id="mail" class="txt" /> </div> 
             <div >
-            <label for="name">Kontakt telefon</label><br> 
+            <label for="name">Kontakt telefon:</label><br> 
             <input type="text" name="name" id="telefon" class="txt" /> </div> 
             <div >
-            <label for="name">Model uređaja</label><br> 
+            <label for="name">Model uređaja:</label><br> 
             <input type="text" name="name" id="model" class="txt" /> </div>
             <div >
-            <label for="name">Objasnite nam vaš problem:</label><br> 
+            <label for="name">Objasnite nam Vaš problem:</label><br> 
             <textarea id="napomena" name="text" rows="10" cols="70"></textarea> </div> 
             <div>
                 <label>Da li ste bili naš korisnik?<br></label>
@@ -75,9 +75,9 @@
     </div>
     <div id="contact">
         <img id="contactpic" src="img/telefon.png" alt="picture">
-        <p>Budući da su računari I laptopovi deo svakodnevnice jednog čoveka, zakazujemo popravku u roku od 1 do 2 dana, a uslugu vršimo istog tog dana kada nam donesete računar ili laptop I u zavisnosti od kvara I težine usluge Vam u najkraćem mogućem roku popravljamo uredjaje.</br></br>Nasa servis podrška je tu u svakom trenutku za vas. Tu smo da odgovorimo na sva Vaša pitanja u vezi popravke računara, nedoumica u vezi sa korišćenjem I damo savete za adekvatno korišćenje opreme. Budite slobodni da nas kontaktirate u svakom trenutku I zakažetepopravku Vašeg računara.
+        <p>Budući da su računari i laptopovi deo svakodnevnice jednog čoveka, zakazujemo popravku u roku od 1 do 2 dana, a uslugu vršimo istog tog dana kada nam donesete računar ili laptop i u zavisnosti od kvara i težine usluge Vam u najkraćem mogućem roku popravljamo uredjaje.</br></br>Naša servis podrška je tu u svakom trenutku za Vas. Tu smo da odgovorimo na sva Vaša pitanja u vezi popravke računara, nedoumica u vezi sa korišćenjem i da vam damo savete za adekvatno korišćenje opreme. Budite slobodni da nas kontaktirate u svakom trenutku i zakažete popravku Vašeg računara.
         </br>
-        </br>Imejl: damservice@gmail.com
+        </br>Imejl adresa: damservice@gmail.com
       </br>Adresa: Jove Ilića 154, Beograd
       </br>Kontakt telefon: 061/111-11-11
       </br>Servis podrška: 061/111-11-23</p>
@@ -91,7 +91,7 @@
                <a href="index.html" ><img id="footerlogo" src="img/logoc.png" alt="logo"> </a>
          
             <div id="address">
-                <p>Fakultet organizacionih nauka<br>Jove Ilića 154<br>11000,Beograd</p>
+                <p>Fakultet organizacionih nauka<br>Jove Ilića 154<br>11000, Beograd</p>
             </div>
         </div>
         <div class="menu">
