--- a/o_nama.html
+++ b/o_nama.html
@@ -66,7 +66,7 @@
       </div>
       <div class="txt">
         <p>
-          Naš tim čine mladi, vredni i komunikativni ljudi koji imaju žellju da za Vas poprave I unaprede računare I laptopove koji će odgovarati svim vašim potrebama i željama. Svakodnevno se trudimo da budemo što bolji i unapredimo svoje znanje kako bismo mogli odgovoriti i na najzahtevnije izazove koje pred nas svakodnevno stavljaju naši korisnici. Zahvaljujući timskom radu i dobroj organizovanosti, možemo se pohvaliti velikim brojem zadovoljnih korisnika. 
+          Naš tim čine mladi, vredni i komunikativni ljudi koji imaju želju da za Vas poprave i unaprede računare i laptopove koji će odgovarati svim vašim potrebama i željama. Svakodnevno se trudimo da budemo što bolji i unapredimo svoje znanje kako bismo mogli odgovoriti i na najzahtevnije izazove koje pred nas svakodnevno stavljaju naši korisnici. Zahvaljujući timskom radu i dobroj organizovanosti, možemo se pohvaliti velikim brojem zadovoljnih korisnika. 
         </p>
       </div>
     </div>
